--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-personalcrm/quote/csv files for db/hubspot-crm-exports-ordenado-por-ultima-usada-2021-01-20.xls
-personalcrm/quote/csv files for db/hubspot-crm-exports-ordenado-por-ultima-usada-2021-01-20.xlsx
-personalcrm/quote/csv files for db/quote_company.csv
-personalcrm/quote/csv files for db/quote_quote.csv
+*.egg-info
+*.pot
+*.py[co]
+.tox/
+__pycache__
+MANIFEST
+dist/
+docs/_build/
+docs/locale/
+node_modules/
+tests/coverage_html/
+tests/.coverage
+build/
+tests/report/
+personalcrm/quote/csv files for
+personalcrm/db.sqlite3
